# CppPy

./: .gitignore  CMakeLists.txt  README.md  README.zh.md  guide.md  pyproject.toml  setup.py
bindings/cffi/: CMakeLists.txt
bindings/cffi/python/: __init__.py  cffi_bridge.py  cffi_bridge.pyi  cffi_build.py
bindings/cffi/src/: cffi_c_impl.cpp  engine_c.def
bindings/cython/: CMakeLists.txt  setup_cython.py
bindings/cython/cmake/: patch_cython_debug.cmake
bindings/cython/python/: __init__.py
bindings/cython/src/: _core.pxd  _core.pyx  cython_cpp_wrap.cpp  engine_cython.pyx
bindings/nanobind/: CMakeLists.txt
bindings/nanobind/python/: __init__.py
bindings/nanobind/src/: nanobind_bindings.cpp
bindings/pybind11/: CMakeLists.txt
bindings/pybind11/python/: __init__.py
bindings/pybind11/src/: pybind11_bindings.cpp
bindings/swig/: CMakeLists.txt
bindings/swig/python/: __init__.py
bindings/swig/src/: engine.i  swig_cpp_wrap.cpp
cmake/: CompilerWarnings.cmake  FindCython.cmake
docs/: cffi.md  comparison.md  cython.md  nanobind.md  pybind11.md  swig.md  troubleshooting.md
engine/: CMakeLists.txt
engine/include/engine/: c_api.h  cpp_api.h  event_bus.h  facade.h  game_object.h  lifecycle.h  scene.h  thread_pool.h
engine/src/: c_api.cpp  cpp_api.cpp  event_bus.cpp  facade.cpp  game_object.cpp  lifecycle.cpp  scene.cpp  thread_pool.cpp
examples/cffi/: demo.py
examples/cython/: demo.py
examples/nanobind/: demo.py
examples/pybind11/: demo.py  lifecycle_demo.py
examples/swig/: demo.py
scripts/: generate_stubs.py  manage.py  package_wheel.py
tests/: conftest.py  test_cffi.py  test_cython.py  test_nanobind.py  test_pybind11.py  test_swig.py
tools/: .clang-format  .clang-tidy  cpp-python-bindings.skill
