[project]
name = "cpppy-engine"
version = "0.1.0"
description = "C++17 game engine kernel with 5 Python binding schemes"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "CppPy Contributors" }]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# Note: package discovery is handled by setup.py, not [tool.setuptools.packages.find].
# setup.py uses package_dir={"": "dist/<Config>"} to find pre-compiled packages.
